[package]
name = "codex-mcp-spawner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "codex-mcp-spawner"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.7.0", default-features = false, features = ["server", "transport-async-rw"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
anyhow = "1"
